# s5

./: .gitignore  README.md  pyproject.toml  setup.py
s5/: __init__.py  client.py  server.py
