[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "s5"
version = "0.0.3"
authors = [
  { name="Yohai Meiron", email="yohai.meiron@scinet.utoronto.ca" },
]
description = "SciNet Super Simple Secrets Server"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
